# Memolang_bot

./: CMakeLists.txt
data/: DataBase.json  last_offset.txt
src/: main.cpp
